--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Office Stretch - Break Reminder</title>
     <meta name="description" content="Smart break reminders for office wellness with guided stretches and exercises" />
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <div id="root"></div>
